<?xml version="1.0" encoding="utf-8"?>
<codes.side.andcolorpicker.app.view.DelayFreeScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/scrollView"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/containerConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/colorCardView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="8dp"
      app:cardElevation="4dp"
      app:cardUseCompatPadding="true"
      app:layout_constraintTop_toTopOf="parent">

      <FrameLayout
        android:id="@+id/colorContainerFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transparency_pattern"
        android:backgroundTint="@color/colorTransparencyTileTint">

        <TextView
          android:id="@+id/colorTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="4dp"
          tools:background="@color/colorPrimary"
          tools:text="#FFFFFF" />
      </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
      android:id="@+id/hueTitleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      android:text="@string/title_hue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/colorCardView" />

    <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
      android:id="@+id/hueColorPickerSeekBar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      app:hslColoringMode="pure"
      app:hslMode="hue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hueTitleTextView" />

    <TextView
      android:id="@+id/saturationTitleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      android:text="@string/title_saturation"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hueColorPickerSeekBar" />

    <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
      android:id="@+id/saturationColorPickerSeekBar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      app:hslColoringMode="pure"
      app:hslMode="saturation"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/saturationTitleTextView" />

    <TextView
      android:id="@+id/lightnessTitleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      android:text="@string/title_lightness"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/saturationColorPickerSeekBar" />

    <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
      android:id="@+id/lightnessColorPickerSeekBar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      app:hslColoringMode="pure"
      app:hslMode="lightness"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/lightnessTitleTextView" />

    <TextView
      android:id="@+id/alphaTitleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      android:text="@string/title_alpha"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lightnessColorPickerSeekBar" />

    <codes.side.andcolorpicker.alpha.HSLAlphaColorPickerSeekBar
      android:id="@+id/alphaColorPickerSeekBar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/alphaTitleTextView" />

    <TextView
      android:id="@+id/dynamicTitleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      android:text="@string/title_dynamic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/alphaColorPickerSeekBar" />

    <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
      android:id="@+id/dynamicColorPickerSeekBar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      app:hslColoringMode="pure"
      app:hslMode="hue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/dynamicTitleTextView" />

    <TextView
      android:id="@+id/modeTitleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      android:text="@string/title_dynamic_color_component"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/dynamicColorPickerSeekBar" />

    <RadioGroup
      android:id="@+id/colorModelRadioGroup"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/modeTitleTextView">

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/hueRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="0dp"
        android:text="@string/title_hue" />

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/saturationRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:text="@string/title_saturation" />

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/lightnessRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:text="@string/title_lightness" />
    </RadioGroup>

    <TextView
      android:id="@+id/coloringModeTitleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      android:text="@string/title_coloring_mode"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/colorModelRadioGroup" />

    <RadioGroup
      android:id="@+id/coloringModeRadioGroup"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/coloringModeTitleTextView">

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/pureRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="0dp"
        android:text="@string/title_coloring_mode_pure" />

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/outputRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:text="@string/title_coloring_mode_output" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/setRandomColorButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:text="@string/action_set_random_color"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/coloringModeRadioGroup" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/showDialogButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:text="@string/action_show_dialog"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/setRandomColorButton" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</codes.side.andcolorpicker.app.view.DelayFreeScrollView>
