<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp"
  tools:context=".MainActivity">

  <TextView
    android:id="@+id/hueTitleTextView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/title_hue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <me.dummyco.andcolorpicker.HSLColorPickerSeekBar
    android:id="@+id/andColorPickerHView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/hueTitleTextView" />

  <TextView
    android:id="@+id/saturationTitleTextView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/title_saturation"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/andColorPickerHView" />

  <me.dummyco.andcolorpicker.HSLColorPickerSeekBar
    android:id="@+id/andColorPickerSView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/saturationTitleTextView" />

  <TextView
    android:id="@+id/lightnessTitleTextView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/title_lightness"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/andColorPickerSView" />

  <me.dummyco.andcolorpicker.HSLColorPickerSeekBar
    android:id="@+id/andColorPickerLView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/lightnessTitleTextView" />

  <TextView
    android:id="@+id/dynamicTitleTextView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/title_dynamic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/andColorPickerLView" />

  <me.dummyco.andcolorpicker.HSLColorPickerSeekBar
    android:id="@+id/andColorPickerDynamicView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/dynamicTitleTextView" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/dynamicSwitchButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/action_switch_mode"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/andColorPickerDynamicView" />

  <TextView
    android:id="@+id/colorTextView"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dynamicSwitchButton"
    tools:background="@color/colorPrimary"
    tools:text="#FFFFFF" />

  <TextView
    android:id="@+id/hlsTextView"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/colorTextView"
    tools:text="[128, 10, 20]" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/setRandomColorButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/action_set_random_color"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/hlsTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>
